<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_food_photo"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_food"
            android:elevation="10dp"
            android:paddingVertical="1dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageView.Corner"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/food_placeholder"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/iv_food_photo"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="12dp"
            android:text="@string/calories_placeholder"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/iv_food_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="12dp"
            android:text="@string/calories"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/tv_calories"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>